--- a/.final_builds/packages/rds-broker/index.yml
+++ b/.final_builds/packages/rds-broker/index.yml
@@ -4,4 +4,8 @@ builds:
     version: 26695ab82e79d98494892a46e37794823b026cf1
     sha1: f36ec0ce8c70b8244be322de3efba13f8fddf0f8
     blobstore_id: b2b2fcf5-a8fd-4429-a172-b70076d7a1bc
+  be3da5320796cc08486682a464e309e91ea71dcf:
+    version: be3da5320796cc08486682a464e309e91ea71dcf
+    sha1: 53c499781249946c1e886bbc1dcf67dbde5f2168
+    blobstore_id: 6838f24a-1e93-4bfc-a21e-58b1a430f68a
 format-version: '2'
